[tool.poetry]
name = "clippy-experiments"
version = "0.1.0"
description = ""
authors = ["Kyle Corbitt <kyle@corbt.com>"]

[tool.poetry.dependencies]
python = "^3.8"
jupyter = "^1.0.0"
Pillow = "^9.0.1"
pytesseract = "^0.3.9"
python-dotenv = "^0.20.0"
requests = "^2.27.1"
sentence-transformers = "^2.2.2"
faiss-cpu = "^1.7.2"

[tool.poetry.dev-dependencies]
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
